--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="text_remember_me">Remember me</string>
     <string name="text_login">Login</string>
     <string name="text_enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
+    <string name="text_note">Note</string>
 </resources>
