--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,7 @@
     <string name="text_remember_me">Remember me</string>
     <string name="text_login">Login</string>
     <string name="text_note">Note</string>
+    <string name="text_date">Date</string>
+    <string name="text_description">Description</string>
+    <string name="text_delete">Delete</string>
 </resources>
