--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="text_login">Login</string>
     <string name="text_enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
     <string name="text_note">Note</string>
+    <string name="text_date">Date</string>
+    <string name="text_description">Description</string>
+    <string name="text_delete">Delete</string>
 </resources>
