--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -18,4 +18,7 @@
     <string name="text_mountain">Mountain</string>
     <string name="text_culinary">Culinary</string>
     <string name="text_start_journey">Start journey</string>
+    <string name="text_search">Search</string>
+    <string name="text_save">Save</string>
+    <string name="text_cancel">Cancel</string>
 </resources>
